--- a/Web/libcss.css
+++ b/Web/libcss.css
@@ -1,36 +1,176 @@
 @charset "utf-8";
 /* CSS Document */
 
-/* @import url('https://fonts.googleapis.com/css?family=Raleway:200'); */
+*{
+	margin: 0;
+	padding: 0;
+	/* clear: both; */
+}
 
-.fish {
-	--borderWidth: 3px;
+body{
+	font-family:'Times New Roman', Times, serif;
+}
+
+/*=====     Header     =====*/
+
+.header{
+	width: 100%;
+	height: 100px;
 	position: relative;
+	background-image: url('Assets/bg_header2.jpg');
 }
 
-.fish:after {
-	content: '';
-	opacity: 60%;
-	position: absolute;
-	top: calc(-1 * var(--borderWidth));
-	left: calc(-1 * var(--borderWidth));
-	height: calc(100% + var(--borderWidth) * 2);
-	width: calc(100% + var(--borderWidth) * 2);
-	background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
-	border-radius: 15px;
-	animation: animatedgradient 3s ease alternate infinite;
-	background-size: 300% 300%;
+.header div{
+	display:inline-block;
 }
 
+/*=====     Fish on header     =====*/
 
-@keyframes animatedgradient {
-	0% {
-		background-position: 0% 50%;
+.skeleton{
+	position:absolute;
+	width:70px;
+	height:70px;
+	top:15px;
+	left:70px;
+}
+
+.skeleton:hover{
+	animation:skel 3s alternate infinite;
+}
+
+@keyframes skel{
+	0%{
+		transform:scale(1);
 	}
-	50% {
-		background-position: 100% 50%;
+
+	50%{
+		transform:scale(1.2);
 	}
-	100% {
-		background-position: 0% 50%;
+
+	100%{
+		transform:scale(1);
 	}
+}
+
+/*=====     Menu on header     =====*/
+
+.header .menu{
+	position:absolute;
+	height:100%;
+	width:35%;
+	display:flex;
+	align-items:center;
+	left:210px;
+	opacity:80%;
+}
+
+.header .menu ul{
+	list-style-type:none;
+	text-align:center;
+	width:100%;
+	height:50%;
+	background:linear-gradient(to right,rgb(64, 51, 64),#454545,#454545,rgb(64, 51, 64));
+	opacity:100%;
+	border-radius:10px;
+}
+
+.header .menu ul li{
+	display:inline-block;
+	margin-left:-5px;
+	padding:12px 15px;
+}
+
+.header .menu ul li a{
+	text-decoration:none;
+	font-size:20px;
+	font-weight:50px;
+	text-shadow:4px 4px 1px black;
+	color:rgb(206, 191, 55);
+	font-weight:bold;
+	-webkit-user-select: none;
+	user-select: none;
+}
+
+.menu ul li a:hover{
+	color:white;
+	text-shadow:4px 4px 1px rgb(30, 7, 64);
+}
+
+.menu ul li a:active{
+	color:rgb(183, 219, 67);
+}
+
+/*=====     Body     =====*/
+
+.middle{
+	width:100%;
+	height:2500px;
+	background:rgb(216, 219, 211);
+	position:relative;
+}
+
+/*=====     Menu     =====*/
+
+.middle .menu---content{
+	position:fixed;
+	top:120px;
+	left:10px;
+	width:300px;
+	height:500px;
+	padding:20px;
+	border-radius:10px;
+	border:1px solid rgb(200, 202, 196);
+	box-sizing:border-box;
+	background:white;
+	opacity:70%;
+	
+}
+
+.middle .menu---content .menu___child---content{
+	width:calc(300px - 40px);
+	height:calc(500px - 40px);
+	display:flex;
+	flex-direction:column;
+}
+
+.middle .menu---content .menu___child---content ul{
+	padding-left:20px;
+}
+
+.middle .menu---content .menu___child---content ul li a{
+	font-size:20px;
+	text-decoration:none;
+	color:rgb(91, 92, 89);
+	-webkit-user-select: none;
+	user-select: none;
+}
+
+.middle .menu---content .menu___child---content ul li a:hover{
+	color:black;
+}
+
+/*=====     Detail     =====*/
+.middle .detail{
+	font-size:20px;
+	color:black;
+	width:60%;
+	height:auto;
+	background:white;
+	position:absolute;
+	left:330px;
+	top:20px;
+	padding:20px 30px;
+	border-radius:10px;
+	border:1px solid rgb(200, 202, 196);
+	box-sizing:border-box;
+	background:white;
+	opacity:70%;
+}
+
+.middle .detail #tableOfContents li a{
+	color:rgb(91, 92, 89);
+}
+
+.middle .detail #tableOfContents li a:hover{
+	color:black;
 }
