--- a/DSA Document/CSS/design.css
+++ b/DSA Document/CSS/design.css
@@ -64,6 +64,7 @@ body {
 }
 
 .card{
+    position: relative;
     width:60%;
     height:auto;
     margin:10px auto;
@@ -76,11 +77,60 @@ body {
     -ms-overflow-style: none;
 }
 
-.card::-webkit-scrollbar { 
+.card:hover{
+    cursor:pointer;
+}
+
+/* .card::-webkit-scrollbar { 
     width: 0 !important;
     display: none; 
 }
 
 .card:hover{
     opacity:80%;
+} */
+
+.card:before{
+    content:'';
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:-100%;
+    background: rgba(255,255,255,0.1);
+    transition:0.5s; 
+}
+
+.card:hover:before{
+    left:-50%;
+    transform: skewX(-5deg);
+}
+
+.card:after{
+    content:'';
+    position:absolute;
+    width:15%;
+    height:100%;
+    top:0;
+    left:-50%;
+    background: rgba(198, 184, 184, 0.1);
+    transition:0.5s;
+}
+
+.card:hover:after{
+    left:15%;
+    transform: skewX(-5deg);
+}
+
+.button-show{
+    float:right;
+    transition:0.5s;
+}
+
+.box-show{
+    display:none;
+}
+
+.button-show:hover{
+    transform: rotate(90deg);
 }
