--- a/DSA Document/CSS/color.css
+++ b/DSA Document/CSS/color.css
@@ -1,62 +1,71 @@
 .name{
-    color:rgb(153, 182, 210);
+    color:#6eb6eb;
 }
 
 .btnname:hover{
-    background-color:rgb(153, 182, 210);
+    background-color:#6eb6eb;
     color:black;
 }
 
 .cmt{
-    color:rgb(34, 205, 34);
+    color:#53a347;
 }
 
 .btncmt:hover{
-    background-color:rgb(34, 205, 34);
+    background-color:#53a347;
+    color:black;
+}
+
+.return{
+    color:#bc95df;
+}
+
+.btnreturn{
+    color:#bc95df;
     color:black;
 }
 
 .str{
-    color:rgb(186, 156, 99);
+    color:#cb987a;
 }
 
 .btnstr:hover{
-    background-color:rgb(186, 156, 99);
+    background-color:#cb987a;
     color:black;
 }
 
 .char{
-    color:grey;
+    color:#8a8c92;
 }
 
 .btnchar:hover{
-    background-color:grey;
+    background-color:#8a8c92;
     color:black;
 }
 
 .func{
-    color:rgb(203, 242, 131);
+    color:#c1d9a9;
 }
 
 .btnfunc:hover{
-    background-color:rgb(203, 242, 131);
+    background-color:#c1d9a9;
     color:black;
 }
 
 .struct{
-    color:rgb(57, 231, 112);
+    color:#45bfac;
 }
 
 .btnstruct:hover{
-    background-color:rgb(57, 231, 112);
+    background-color:#45bfac;
     color:black;
 }
 
 .old-type{
-    color:rgb(45, 45, 198);
+    color:#4a94d2;
 }
 
 .btnold-type:hover{
-    background-color:rgb(45, 45, 198);
+    background-color:#4a94d2;
     color:black;
 }
