--- a/DSA Document/CSS/color.css
+++ b/DSA Document/CSS/color.css
@@ -26,11 +26,11 @@
 }
 
 .str{
-    color:#cb987a;
+    color:#ab7e5f;
 }
 
 .btnstr:hover{
-    background-color:#cb987a;
+    background-color:#ab7e5f;
     color:black;
 }
 
