--- a/DSA Document/CSS/design.css
+++ b/DSA Document/CSS/design.css
@@ -141,6 +141,11 @@ body {
     animation: hidden 1s linear;
 }
 
+.title{
+    font-size:25px;
+    line-height:40px;
+}
+
 @keyframes show{
     from { transform: scaleY(0);}
     to { transform: scaleY(100%); }
